--- a/public/views/dashboard/weather.html
+++ b/public/views/dashboard/weather.html
@@ -1,7 +1,7 @@
 <h1>Weather dash board</h1>
 
 <input type="text" ng-model="vm.zipcode">
+<p>{{ vm.zipcode }}</p>
+<p>city name: {{ vm.name }}</p>
+<p>{{ vm.start }}</p>
 
-{{ vm.zipcode }}
-
-{{ vm.name }}
