--- a/public/views/dashboard/weather.html
+++ b/public/views/dashboard/weather.html
@@ -1,5 +1,7 @@
 <h1>Weather dash board</h1>
 
+<button ng-click="vm.clickMe()" class="btn btn-lg">Click Me</button>
+
 <input type="text" ng-model="vm.zipcode">
 <p>Zip Code: {{ vm.zipcode }}</p>
 <p>city name: {{ vm.name }}</p>
