--- a/public/views/dashboard/login.html
+++ b/public/views/dashboard/login.html
@@ -2,4 +2,4 @@
 <button ng-click="vm.getUserInfo()">Get User Infor</button>
 {{vm.user}}
 <br>
-<a href="/auth/google" class="btn btn-danger">+ Google</a>
+<a href="/auth/google" class="btn btn-danger" ng-click="vm.changeLoginStatus()">+ Google</a>
